--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,9 @@
 {
-  "singleQuote": true,
-  "trailingComma": "all"
+  "singleQuote": false,
+  "trailingComma": "all",
+  "useTabs": false,
+  "semi": true,
+  "bracketSpacing": true,
+  "printWidth": 100,
+  "endOfLine": "auto"
 }
