changed project name

--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,4 @@
-MONGODB_URI=127.0.0.1:27017/pasta_bar
+MONGODB_URI=127.0.0.1:27017/food_delivery
 JWT_SECRET=secret
 TELEGRAM_TOKEN=yourTelegramToken
 CHAT_ID=yourChatId
