--- a/vercel.json
+++ b/vercel.json
@@ -22,5 +22,11 @@
       "src": "/(.*)",
       "dest": "src/main.ts"
     }
-  ]
+  ],
+  "env": {
+    "MONGODB_URI": "@mongodb-uri",
+    "JWT_SECRET": "@jwt-secret",
+    "TELEGRAM_TOKEN": "@telegram-token",
+    "CHAT_ID": "@chat-id"
+  }
 }
