--- a/vercel.json
+++ b/vercel.json
@@ -28,10 +28,9 @@
     }
   ],
   "env": {
-    "MONGODB_URI": "@mongodb-uri",
-    "JWT_SECRET": "@jwt-secret",
-    "TELEGRAM_TOKEN": "@telegram-token",
-    "CHAT_ID": "@chat-id"
+    "MONGODB_URI": "@MONGODB_URI",
+    "JWT_SECRET": "@JWT_SECRET",
+    "TELEGRAM_TOKEN": "@TELEGRAM_TOKEN",
+    "CHAT_ID": "@CHAT_ID"
   }
 }
-
