--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
   "routes": [
     {
       "src": "/static/(.*)",
-      "dest": "scr/uploads/$1"
+      "dest": "uploads/$1"
     },
     {
       "src": "/api/(.*)",
